// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAllPkgsForVersion > returns valid JSON - Alpine Linux 1`] = `
[
  {
    "binaries": [
      {
        "architecture": "arch_mock",
        "image_type": "jdk",
        "os": "os_mock",
        "package": {
          "checksum": "checksum_mock",
          "link": "https://link_mock/",
          "name": "name_mock.tar.gz",
          "size": 0,
        },
      },
    ],
    "download_count": 0,
    "id": "id_mock",
    "release_link": "https://release_link_mock/",
    "release_name": "release_name_mock",
    "release_type": "release_type_mock",
    "timestamp": "2020-01-01T00:00:00.000Z",
    "updated_at": "2020-01-01T00:00:00.000Z",
    "vendor": "vendor_mock",
    "version_data": {
      "build": 0,
      "major": 0,
      "minor": 0,
      "openjdk_version": "openjdk_version_mock",
      "patch": 0,
      "security": 0,
    },
  },
]
`;

exports[`getAllPkgsForVersion > returns valid JSON - installer 1`] = `
[
  {
    "binaries": [
      {
        "architecture": "arch_mock",
        "image_type": "jdk",
        "installer": {
          "checksum": "installer_checksum_mock",
          "link": "https://installer_link_mock/",
          "name": "installer_name_mock.msi",
          "size": 0,
        },
        "os": "os_mock",
        "package": {
          "checksum": "checksum_mock",
          "link": "https://link_mock/",
          "name": "name_mock.tar.gz",
          "size": 0,
        },
      },
    ],
    "download_count": 0,
    "id": "id_mock",
    "release_link": "https://release_link_mock/",
    "release_name": "release_name_mock",
    "release_type": "release_type_mock",
    "timestamp": "2020-01-01T00:00:00.000Z",
    "updated_at": "2020-01-01T00:00:00.000Z",
    "vendor": "vendor_mock",
    "version_data": {
      "build": 0,
      "major": 0,
      "minor": 0,
      "openjdk_version": "openjdk_version_mock",
      "patch": 0,
      "security": 0,
    },
  },
]
`;

exports[`getAllPkgsForVersion > returns valid JSON 1`] = `
[
  {
    "binaries": [
      {
        "architecture": "arch_mock",
        "image_type": "jdk",
        "os": "os_mock",
        "package": {
          "checksum": "checksum_mock",
          "link": "https://link_mock/",
          "name": "name_mock.tar.gz",
          "size": 0,
        },
      },
    ],
    "download_count": 0,
    "id": "id_mock",
    "release_link": "https://release_link_mock/",
    "release_name": "release_name_mock",
    "release_type": "release_type_mock",
    "timestamp": "2020-01-01T00:00:00.000Z",
    "updated_at": "2020-01-01T00:00:00.000Z",
    "vendor": "vendor_mock",
    "version_data": {
      "build": 0,
      "major": 0,
      "minor": 0,
      "openjdk_version": "openjdk_version_mock",
      "patch": 0,
      "security": 0,
    },
  },
]
`;
